# hellocuda

./: .gitignore  CMakeLists.txt  README.md  block_and_grid.cu  cuda_device.cu  cuda_info.cu  cuda_utils.h
sgemm/: CMakeLists.txt  README.md  data.h  sgemm_cuda_0.cu  sgemm_cuda_1.cu  sgemm_cuda_2.cu
sgemm/data/: gen_data.py
startup/: CMakeLists.txt  add.cu  block_and_grid.cu  cuda_info.cu  hello_cuda.cu
utils/: CMakeLists.txt  cuda_utils.cpp  cuda_utils.h
